fix: reduce gap in tick monitor

--- a/src/components/tick-monitor/index.less
+++ b/src/components/tick-monitor/index.less
@@ -3,7 +3,7 @@
   background-color: @one-lay-color;
   padding: 12rpx;
   display: flex;
-  gap: 16rpx;
+  gap: 8rpx;
   border-radius: 8rpx;
   .tick-text {
     font-size: 32rpx;
